@@ -4,9 +4,8 @@
    type         => 'singular',
    use_form_tag => 0
 &>
-
-<& '/widgets/wrappers/sharky/table_top.mc', 
-         caption => 'Publish a Category' 
+<& '/widgets/wrappers/sharky/table_top.mc',
+         caption => 'Publish a Category'
 &>
 <& '/widgets/listManager/listManager.mc',
    object    => 'category',
@@ -18,7 +17,6 @@
    behavior  => 'expand',
 &>
 <& '/widgets/wrappers/sharky/table_bottom.mc' &>
-
 <p>
 <& '/widgets/buttons/submit.mc',
     disp    => 'Publish',
@@ -28,14 +26,7 @@
     useTable    => 0,
 &>
 </p>
-
-<%init>
-
-</%init>
-
-<%once>
-my $widget = 'desk_asset';
-
+<%once>;
 my $select = sub {
     my $cat = shift;
     my $cat_id = $cat->get_id;
