@@ -184,16 +184,16 @@ B<Notes:> NONE.
 sub _do_it {
     my $self = shift;
     # Check to see if we have story or media id
-    if (my $sid = $self->get_story_id) {
+    if (my $sid = $self->get_story_instance_id) {
         my $burner = Bric::Util::Burner->new({ out_dir => STAGE_ROOT });
         # Instantiate the story.
-        my $s = Bric::Biz::Asset::Business::Story->lookup({ id => $sid });
+        my $s = Bric::Biz::Asset::Business::Story->lookup({ version_id => $sid });
         $burner->publish($s, 'story', $self->get_user_id,
                          $self->get_sched_time(ISO_8601_FORMAT), 1);
-    } elsif (my $mid = $self->get_media_id) {
+    } elsif (my $mid = $self->get_media_instance_id) {
         my $burner = Bric::Util::Burner->new({ out_dir => STAGE_ROOT });
         # Instantiate the media.
-        my $m = Bric::Biz::Asset::Business::Media->lookup({ id => $mid });
+        my $m = Bric::Biz::Asset::Business::Media->lookup({ version_id => $mid });
         $burner->publish($m, 'media', $self->get_user_id,
                          $self->get_sched_time(ISO_8601_FORMAT), 1);
     }
